answer convert modify

--- a/az-104/mock-test.html
+++ b/az-104/mock-test.html
@@ -634,14 +634,21 @@
             convertToOptionAnswer(answer) {
                 switch (answer) {
                     case 'a':
+                    case 'A':
+                    case 'Y':
                         return 1;
                     case 'b':
+                    case 'B':
+                    case 'N':
                         return 2;
                     case 'c':
+                    case 'C':
                         return 3;
                     case 'd':
+                    case 'D':
                         return 4;
                     case 'e':
+                    case 'E':
                         return 5;
                 }
 
