add option case

--- a/az-104/mock-test.html
+++ b/az-104/mock-test.html
@@ -627,6 +627,8 @@
                         return 'D.';
                     case 5:
                         return 'E.';
+                    case 6:
+                        return 'F.';
                 }
 
                 return option;
