--- a/az-104/mock-test.html
+++ b/az-104/mock-test.html
@@ -71,25 +71,25 @@
             return {
                 questions: [
                     new Question('1-1', 'single', 'C'),
-                    new Question('1-2', 'single', 'B'),
-                    new Question('1-3', 'single', 'B'),
-                    new Question('1-4', 'single', 'A'),
+                    new Question('1-2', 'single', 'B', 2),
+                    new Question('1-3', 'single', 'B', 2),
+                    new Question('1-4', 'single', 'A', 2),
                     new Question('1-5', 'single', 'D'),
-                    new Question('1-6', 'single', 'B'),
-                    new Question('1-7', 'single', 'B'),
-                    new Question('1-8', 'single', 'B'),
-                    new Question('1-9', 'single', 'B'),
-                    new Question('1-10', 'single', 'B'),
-                    new Question('1-11', 'single', 'B'),
+                    new Question('1-6', 'single', 'B', 2),
+                    new Question('1-7', 'single', 'B', 2),
+                    new Question('1-8', 'single', 'B', 2),
+                    new Question('1-9', 'single', 'B', 2),
+                    new Question('1-10', 'single', 'B', 2),
+                    new Question('1-11', 'single', 'B', 2),
                     new Question('1-12', 'single', 'B'),
-                    new Question('1-13', 'single', 'B'),
-                    new Question('1-14', 'single', 'A'),
-                    new Question('1-15', 'single', 'B'),
-                    new Question('1-16', 'multiSelect', ['C']),
-                    new Question('1-17', 'multiSelect', ['C']),
+                    new Question('1-13', 'single', 'B', 2),
+                    new Question('1-14', 'single', 'A', 2),
+                    new Question('1-15', 'single', 'B', 2),
+                    new Question('1-16', 'single', 'C'),
+                    new Question('1-17', 'single', 'C'),
                     new Question('1-18', 'single', 'D'),
                     new Question('1-19', 'single', 'B'),
-                    new Question('1-20', 'multiSelect', ['An azure key vault', 'access policy']),
+                    new Question('1-20', 'multiSelect', [1, 4], 6),
                     new Question('1-21', 'single', 'A'),
                     new Question('1-22', 'single', 'B'),
                     new Question('1-23', 'multiSelect', ['Hyper-V site', 'Azure Recovery Service Vault', 'Replication policy']),
