--- a/az-104/mock-test.html
+++ b/az-104/mock-test.html
@@ -92,34 +92,43 @@
                     new Question('1-20', 'multiSelect', [1, 4], 6),
                     new Question('1-21', 'single', 'A'),
                     new Question('1-22', 'single', 'B'),
-                    new Question('1-23', 'multiSelect', ['Hyper-V site', 'Azure Recovery Service Vault', 'Replication policy']),
-                    new Question('1-24', 'single', 'B'),
-                    new Question('1-25', 'single', 'B'),
+                    new Question('1-23', 'multiSelect', [1,3,5], 6),
+                    new Question('1-24', 'single', 'B', 2),
+                    new Question('1-25', 'single', 'B', 2),
                     new Question('1-26', 'single', 'A'),
                     new Question('1-27', 'single', 'C'),
-                    new Question('1-28', 'single', 'B'),
-                    new Question('1-29', 'single', 'B'),
-                    new Question('1-30', 'single', 'A'),
-                    new Question('1-31', 'multiSelect', ['E']),
+                    new Question('1-28', 'single', 'B', 2),
+                    new Question('1-29', 'single', 'B', 2),
+                    new Question('1-30', 'single', 'A', 2),
+                    new Question('1-31', 'single', 'E', 5),
                     new Question('1-32', 'single', 'A'),
                     new Question('1-33', 'single', 'D'),
                     new Question('1-34', 'single', 'B'),
                     new Question('1-35', 'single', 'C'),
                     new Question('1-36', 'single', 'B'),
-                    new Question('1-37', 'multiSelect', ['A', 'B', 'C', 'D', 'E']),
-                    new Question('1-38', 'single', 'B'),
-                    new Question('1-39', 'single', 'B'),
-                    new Question('1-40', 'single', 'A'),
-                    new Question('2-1', 'multiSelect', ['network LB1', 'network LB2']),
+                    new Question('1-37', 'multiSelect', [1, 2, 3, 4, 5], 5),
+                    new Question('1-38', 'single', 'B', 2),
+                    new Question('1-39', 'single', 'B', 2),
+                    new Question('1-40', 'single', 'A', 2),
+                    new Question('2-1-1', 'single', 'B'),
+                    new Question('2-1-2', 'single', 'B'),
                     new Question('2-2', 'single', 'B'),
-                    new Question('2-3', 'multiSelect', ['A', 'C']),
-                    new Question('2-4', 'multiSelect', ['N', 'N', 'Y']),
-                    new Question('2-5', 'multiSelect', ['N', 'N', 'N']),
+                    new Question('2-3', 'multiSelect', ['A', 'C'], 5),
+                    new Question('2-4-1', 'single', 'N', 2),
+                    new Question('2-4-2', 'single', 'N', 2),
+                    new Question('2-4-3', 'single', 'Y', 2),
+                    new Question('2-5-1', 'single', 'N', 2),
+                    new Question('2-5-2', 'single', 'N', 2),
+                    new Question('2-5-3', 'single', 'N', 2),
                     new Question('2-6', 'single', 'B'),
-                    new Question('2-7', 'multiSelect', ['D1']),
+                    new Question('2-7-1', 'single', 'B', 5),
+                    new Question('2-7-2', 'single', 'C'),
                     new Question('2-8', 'single', 'C'),
                     new Question('2-9', 'single', 'C'),
-                    new Question('2-10', 'single', 'B'),
+                    new Question('2-10', 'single', 'B', 3),
+
+                    // 51-100
+
                     new Question('2-11', 'single', 'A'),
                     new Question('2-12', 'single', 'C'),
                     new Question('2-13', 'single', 'A'),
