--- a/az-104/mock-test.html
+++ b/az-104/mock-test.html
@@ -132,53 +132,75 @@
                     new Question('2-11', 'single', 'A'),
                     new Question('2-12', 'single', 'C'),
                     new Question('2-13', 'single', 'A'),
-                    new Question('2-14', 'multiSelect', ['N', 'Y', 'N']),
+                    new Question('2-14-1', 'single', 'N'),
+                    new Question('2-14-2', 'single', 'Y'),
+                    new Question('2-14-3', 'single', 'N'),
                     new Question('2-15', 'single', 'C'),
                     new Question('2-16', 'single', 'B'),
                     new Question('2-17', 'single', 'A'),
-                    new Question('2-18', 'single', 'B'),
-                    new Question('2-19', 'single', 'B'),
-                    new Question('2-20', 'single', 'A'),
-                    new Question('2-21', 'multiSelect', ['assign a tag to each resource', 'from the cost analysis blade', 'filter the view by tog', 'download the usage report']),
+                    new Question('2-18', 'single', 'B', 2),
+                    new Question('2-19', 'single', 'B', 2),
+                    new Question('2-20', 'single', 'A', 2),
+                    new Question('2-21', 'multiSelect', [2, 4, 3], 5),
                     new Question('2-22', 'single', 'B'),
-                    new Question('2-23', 'multiSelect', ['Y', 'Y', 'N']),
+                    new Question('2-23-1', 'single', 'Y'),
+                    new Question('2-23-2', 'single', 'Y'),
+                    new Question('2-23-3', 'single', 'N'),
                     new Question('2-24', 'single', 'A'),
-                    new Question('2-25', 'multiSelect', ['A', 'E']),
-                    new Question('2-26', 'multiSelect', ['A', 'E']),
+                    new Question('2-25-1', 'single', 'A', 2),
+                    new Question('2-25-2', 'single', 'A', 3),
+                    new Question('2-26', 'multiSelect', ['A', 'E'], 5),
                     new Question('2-27', 'single', 'B'),
-                    new Question('2-28', 'multiSelect', ['keep simple, without conditions', 'access control should always grant', 'useras and groups+could apps', 'grant']),
+                    new Question('2-28-1', 'multiSelect', [1, 2], 3),
+                    new Question('2-28-2', 'multiSelect', [1], 2),
                     new Question('2-29', 'single', 'A'),
                     new Question('2-30', 'single', 'C'),
-                    new Question('2-31', 'multiSelect', ['group 1 only', 'group 1 and 2 only']),
-                    new Question('2-32', 'multiSelect', ['1', '3']),
-                    new Question('2-33', 'single', 'A'),
-                    new Question('2-34', 'single', 'A'),
-                    new Question('2-35', 'single', 'B'),
+                    new Question('2-31-1', 'single', 1, 7),
+                    new Question('2-31-2', 'single', 4, 7),
+                    new Question('2-32-1', 'single', 3),
+                    new Question('2-32-2', 'single', 4),
+                    new Question('2-33', 'single', 'A', 2),
+                    new Question('2-34', 'single', 'A', 2),
+                    new Question('2-35', 'single', 'B', 2),
                     new Question('2-36', 'single', 'C'),
-                    new Question('2-37', 'multiSelect', ['Y', 'Y', 'N']),
+                    new Question('2-37-1', 'single', 'Y', 2),
+                    new Question('2-37-2', 'single', 'Y', 2),
+                    new Question('2-37-3', 'single', 'N', 2),
                     new Question('2-38', 'single', 'A'),
                     new Question('2-39', 'single', 'B'),
                     new Question('2-40', 'single', 'A'),
-                    new Question('2-41', 'multiSelect', ['costco -> need a fake(custom) name -> go costco -> verify', 'Add a custom name', 'add a record to the public contoso.com DNS zone']),
+                    new Question('2-41', 'orderSelect', [1, 5, 6], 6),
                     new Question('2-42', 'single', 'B'),
                     new Question('2-43', 'single', 'D'),
-                    new Question('2-44', 'multiSelect', ['Y', 'N', 'Y']),
-                    new Question('2-45', 'multiSelect', ['1', '3']),
-                    new Question('2-46', 'multiSelect', ['Sub1 RG1 and VM1', 'Sub1, RG1 and VM1']),
+                    new Question('2-44-1', 'single', 'Y', 2),
+                    new Question('2-44-2', 'single', 'N', 2),
+                    new Question('2-44-3', 'single', 'Y', 2),
+                    new Question('2-45-1', 'single', 3, 5),
+                    new Question('2-45-2', 'single', 1, 6),
+                    new Question('2-46-1', 'single', 3, 5),
+                    new Question('2-46-2', 'single', 3, 5),
                     new Question('2-47', 'single', 'B'),
-                    new Question('2-48', 'multiSelect', ['N', 'N', 'N']),
-                    new Question('2-49', 'single', 'B'),
+                    new Question('2-48-1', 'single', 'N', 2),
+                    new Question('2-48-2', 'single', 'N', 2),
+                    new Question('2-48-3', 'single', 'N', 2),
+                    new Question('2-49', 'single', 'B', 2),
                     new Question('2-50', 'single', 'B'),
-                    new Question('2-51', 'single', 'A'),
-                    new Question('2-52', 'single', 'assign access to other users for, delete'),
+                    new Question('2-51', 'single', 'A', 2),
+                    new Question('2-52-1', 'single', 3, 3),
+                    new Question('2-52-2', 'single', 3, 1),
                     new Question('2-53', 'single', 'B'),
-                    new Question('2-54', 'multiSelect', ['dataActions', 'assignableScopes']),
+                    new Question('2-54-1', 'single', 4, 6),
+                    new Question('2-54-2', 'single', 6, 6),
                     new Question('2-55', 'single', 'A'),
                     new Question('2-56', 'single', 'B'),
-                    new Question('2-57', 'single', 'TMSR > MSRV'),
-                    new Question('2-58', 'single', 'A'),
-                    new Question('2-59', 'single', 'B'),
-                    new Question('2-60', 'single', 'B'),
+                    new Question('2-57-1', 'single', 'D', 5),
+                    new Question('2-57-2', 'single', 'D', 5),
+                    new Question('2-58', 'single', 'A', 2),
+                    new Question('2-59', 'single', 'B', 2),
+                    new Question('2-60', 'single', 'B', 2),
+
+                    // 101-150
+
                     new Question('2-61', 'single', 'A'),
                     new Question('2-62', 'multiSelect', ['B', 'D']),
                     new Question('2-63', 'single', 'B'),
