--- a/az-104/mock-test.html
+++ b/az-104/mock-test.html
@@ -202,55 +202,85 @@
                     // 101-150
 
                     new Question('2-61', 'single', 'A'),
-                    new Question('2-62', 'multiSelect', ['B', 'D']),
+                    new Question('2-62', 'multiSelect', ['B', 'D'], 5),
                     new Question('2-63', 'single', 'B'),
                     new Question('2-64', 'single', 'C'),
-                    new Question('2-65', 'single', 'B'),
-                    new Question('2-66', 'multiSelect', ['Role1 and built-in', 'role2 only']),
-                    new Question('2-67', 'multiSelect', ['reader and data access', 'owner']),
+                    new Question('2-65', 'single', 'B', 2),
+                    new Question('2-66-1', 'single', 3, 5),
+                    new Question('2-66-2', 'single', 1, 5),
+                    new Question('2-67', 'single', 3),
+                    new Question('2-67', 'single', 1),
                     new Question('2-68', 'single', 'B'),
                     new Question('2-69', 'single', 'B'),
-                    new Question('2-70', 'multiSelect', ['N', 'N', 'Y']),
+                    new Question('2-70-1', 'single', 'N', 2),
+                    new Question('2-70-2', 'single', 'N', 2),
+                    new Question('2-70-3', 'single', 'Y', 2),
                     new Question('2-71', 'single', 'C'),
-                    new Question('2-72', 'multiSelect', ['N', 'N', 'Y']),
+                    new Question('2-72-1', 'single', 'N', 2),
+                    new Question('2-72-2', 'single', 'N', 2),
+                    new Question('2-72-3', 'single', 'Y', 2),
                     new Question('2-73', 'single', 'B'),
                     new Question('2-74', 'single', 'B'),
-                    new Question('2-75', 'multiSelect', ['Y', 'N', 'Y']),
+                    new Question('2-75-1', 'single', 'Y', 2),
+                    new Question('2-75-2', 'single', 'N', 2),
+                    new Question('2-75-3', 'single', 'Y', 2),
                     new Question('2-76', 'single', 'B'),
-                    new Question('2-77', 'multiSelect', ['Y', 'Y', 'N']),
+                    new Question('2-77-1', 'single', 'Y', 2),
+                    new Question('2-77-2', 'single', 'Y', 2),
+                    new Question('2-77-3', 'single', 'N', 2),
                     new Question('2-78', 'single', 'D'),
                     new Question('2-79', 'single', 'B'),
-                    new Question('2-80', 'multiSelect', ['Y', 'N', 'N']),
-                    new Question('2-81', 'multiSelect', ['1', '3', '123']),
-                    new Question('2-82', 'single', 'B'),
-                    new Question('2-83', 'single', 'A'),
+                    new Question('2-80', 'single', 'Y', 2),
+                    new Question('2-80-1', 'single', 'N', 2),
+                    new Question('2-80-2', 'single', 'N', 2),
+                    new Question('2-81-1', 'single', 'C'),
+                    new Question('2-81-2', 'single', 'D'),
+                    new Question('2-82', 'single', 'B', 2),
+                    new Question('2-83', 'single', 'A', 2),
                     new Question('2-84', 'single', 'C'),
                     new Question('2-85', 'single', 'D'),
-                    new Question('2-86', 'multiSelect', ['Ad and SAS', 'SAS only']),
+                    new Question('2-86-1', 'single', 3, 3),
+                    new Question('2-86-2', 'single', 2, 3),
                     new Question('2-87', 'single', 'Identities'),
                     new Question('2-88', 'single', 'C'),
                     new Question('2-89', 'single', 'C'),
                     new Question('2-90', 'single', 'B'),
-                    new Question('2-91', 'multiSelect', ['user.department', 'and', '-eq']),
-                    new Question('2-92', 'multiSelect', ['what default can have any permission!', 'Users can register application', 'Restrict access to Azure AD admistartion portal']),
-                    new Question('2-93', 'multiSelect', ['N', 'N', 'Y']),
-                    new Question('2-94', 'single', 'B'),
-                    new Question('2-95', 'multiSelect', ['N', 'N', 'Y']),
-                    new Question('2-96', 'single', 'B'),
-                    new Question('2-97', 'single', 'B'),
-                    new Question('2-98', 'single', 'B'),
+                    new Question('2-91-1', 'single', 'C'),
+                    new Question('2-91-2', 'single', 'A', 3),
+                    new Question('2-91-3', 'single', 'B'),
+                    new Question('2-92', 'multiSelect', [1, 2], 8),
+                    new Question('2-93-1', 'single', 'N', 2),
+                    new Question('2-93-2', 'single', 'N', 2),
+                    new Question('2-93-3', 'single', 'Y', 2),
+                    new Question('2-94', 'single', 'B', 2),
+                    new Question('2-95-1', 'single', 'N', 2),
+                    new Question('2-95-2', 'single', 'N', 2),
+                    new Question('2-95-3', 'single', 'Y', 2),
+                    new Question('2-96 (duplicate)', 'single', 'B'),
+                    new Question('2-97 (duplicate)', 'single', 'B'),
+                    new Question('2-98 (duplicate)', 'single', 'B'),
                     new Question('2-99', 'single', 'C'),
                     new Question('3-1', 'single', 'D'),
-                    new Question('3-2', 'multiSelect', ['12', 'all']),
+                    new Question('3-2-1', 'single', 4, 5),
+                    new Question('3-2-2', 'single', 4),
                     new Question('3-3', 'single', 'B'),
-                    new Question('3-4', 'multiSelect', ['IAM', 'SAS']),
-                    new Question('3-5', 'multiSelect', ['V2', 'GRS']),
-                    new Question('3-6', 'multiSelect', ['B', 'C', 'E']),
-                    new Question('3-7', 'multiSelect', ['Y', 'N', 'N']),
-                    new Question('3-8', 'multiSelect', ['attach', 'create import job', 'detach', 'update import job']),
-                    new Question('3-9', 'multiSelect', ['N', 'Y', 'Y']),
-                    new Question('3-10', 'multiSelect', ['go costco buy file', 'windowns file(windows not blob)', 'get data (learning data)']),
-                    new Question('3-11', 'multiSelect', ['make', 'blob', 'copy']),
+                    new Question('3-4-1', 'single', 3),
+                    new Question('3-4-2', 'single', 4),
+                    new Question('3-5-1', 'multiSelect', 3, 3),
+                    new Question('3-5-2', 'multiSelect', 1),
+                    new Question('3-6', 'multiSelect', ['B', 'C', 'E'], 5),
+                    new Question('3-7-1', 'single', 'Y', 2),
+                    new Question('3-7-2', 'single', 'N', 2),
+                    new Question('3-7-3', 'single', 'N', 2),
+                    new Question('3-8', 'orderSelect', [3, 2, 4, 1]),
+                    new Question('3-9-1', 'single', 'N', 2),
+                    new Question('3-9-2', 'single', 'Y', 2),
+                    new Question('3-9-3', 'single', 'Y', 2),
+                    new Question('3-10', 'multiSelect', [7, 5, 6], 8),
+                    new Question('3-11-1', 'single', 1, 3),
+                    new Question('3-11-2', 'single', 1, 6),
+
+                    //  151-200
                     new Question('3-12', 'multiSelect', ['1', '123']),
                     new Question('3-13', 'multiSelect', ['never', 'never']),
                     new Question('3-14', 'multiSelect', ['N', 'N', 'Y']),
