--- a/az-104/mock-test.html
+++ b/az-104/mock-test.html
@@ -56,6 +56,7 @@
                             <label>{{ optionDisplay(option) }}</label>
                         </div>
                     </template>
+                    <br>
                 </template>
             </div>
         </el-col>
@@ -230,8 +231,8 @@
                     new Question('2-65', 'single', 'B', 2),
                     new Question('2-66-1', 'single', 3, 5),
                     new Question('2-66-2', 'single', 1, 5),
-                    new Question('2-67', 'single', 3),
-                    new Question('2-67', 'single', 1),
+                    new Question('2-67-1', 'single', 3),
+                    new Question('2-67-2', 'single', 1),
                     new Question('2-68', 'single', 'B'),
                     new Question('2-69', 'single', 'B'),
                     new Question('2-70-1', 'single', 'N', 2),
@@ -288,8 +289,8 @@
                     new Question('3-3', 'single', 'B'),
                     new Question('3-4-1', 'single', 3),
                     new Question('3-4-2', 'single', 4),
-                    new Question('3-5-1', 'multiSelect', 3, 3),
-                    new Question('3-5-2', 'multiSelect', 1),
+                    new Question('3-5-1', 'single', 3, 3),
+                    new Question('3-5-2', 'single', 1),
                     new Question('3-6', 'multiSelect', ['B', 'C', 'E'], 5),
                     new Question('3-7-1', 'single', 'Y', 2),
                     new Question('3-7-2', 'single', 'N', 2),
